testing absolute path for background image

--- a/rquinn1017.html
+++ b/rquinn1017.html
@@ -19,7 +19,7 @@
              html, body {
              padding: 0;
              margin: 0;
-             background-color:orange;
+            
              }
              html, body, .wrapper {
              height: 100%;
@@ -28,7 +28,7 @@
              padding-top: 100px;
              }
              body {
-             background-color: orange;
+             background-color: green;
              -webkit-print-color-adjust: exact !important;
              font-family: 'sans-serif;
              }
@@ -67,7 +67,7 @@
              display: flex;
              justify-content: center;
              flex-wrap: wrap;
-             background-color: #FF8C00;
+             background-color: #2E8B57	;
              color: black;
              padding: 10px;
              width: 95%;
@@ -80,7 +80,7 @@
              border-radius: 50%;
              object-fit: cover;
              margin-top: -75px;
-             border: 6px solid #FF4500;
+             border: 6px solid #8FBC8F;
              box-shadow: rgba(0, 0, 0, 0.3) 4px 1px 20px 4px;
              }
              .photo-header h1, .photo-header h2 {
@@ -123,7 +123,7 @@
              .card {
                padding: 20px;
                border-radius: 6px;
-               background-color: #FF8C00;
+               background-color: #2E8B57	;
                color: black;
                margin: 20px;
              }
