removed console logs used for testing

--- a/rquinn1017.html
+++ b/rquinn1017.html
@@ -80,7 +80,7 @@
              border-radius: 50%;
              object-fit: cover;
              margin-top: -75px;
-             border: 6px solid #73448C;
+             border: 6px solid #FEE24C;
              box-shadow: rgba(0, 0, 0, 0.3) 4px 1px 20px 4px;
              }
              .photo-header h1, .photo-header h2 {
@@ -157,7 +157,7 @@
                 <nav class="links-nav">
                    <a class="nav-link" target="_blank" rel="noopener noreferrer" href="https://www.google.com/maps/place/Richmond, VA"><i class="fas fa-location-arrow"></i> Richmond, VA</a>
                    <a class="nav-link" target="_blank" rel="noopener noreferrer" href="https://github.com/rquinn1017"><i class="fab fa-github-alt"></i> GitHub</a>
-                   <a class="nav-link" target="_blank" rel="noopener noreferrer" href="https://rquinn1017.github.io/profile-robQuinn/"><i class="fas fa-rss"></i> Blog</a>
+                   <a class="nav-link" target="_blank" rel="noopener noreferrer" href="https://rquinn1017.github.io/profile-robQuinn/"><i class="fas fa-rss"></i> Website</a>
                 </nav>
              </div>
              <main>
